fixed horizontal scrolling on mobile

--- a/JessicaBarhomaCV/wwwroot/css/site.css
+++ b/JessicaBarhomaCV/wwwroot/css/site.css
@@ -14,6 +14,8 @@ html {
 
 body {
     font-family: 'Quicksand', sans-serif;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .navbar {
